feat: add descriptions

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,8 @@
                 <th>[[#{persona.apellido}]]</th>
                 <th>[[#{persona.email}]]</th>
                 <th>[[#{persona.telefono}]]</th>
-                <th>[[#{persona.editar}]]</th>
-                <th>[[#{persona.eliminar}]]</th>
+                <th>[[#{accion.editar}]]</th>
+                <th>[[#{accion.eliminar}]]</th>
             </tr>
 
             <tr th:each="persona: ${personas}">
