--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,9 +27,9 @@
                 <td th:text="${persona.apellido}"></td>
                 <td th:text="${persona.email}"></td>
                 <td th:text="${persona.telefono}"></td>
-                <td><a th:href="@{/editar/} + ${persona.idPersona}" th:text="Editar"></a></td>
+                <td><a th:href="@{/editar/} + ${persona.idPersona}">[[#{accion.editar}]]</a></td>
                 <!-- Con parámetros -->
-                <td><a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="Eliminar"></a></td>
+                <td><a th:href="@{/eliminar(idPersona=${persona.idPersona})}">[[#{accion.eliminar}]]</a></td>
             </tr>
         </table>
     </div>
