--- a/src/main/resources/templates/modificar.html
+++ b/src/main/resources/templates/modificar.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header th:replace="layout/plantilla :: header"></header>
-    <h2>Datos de la Persona</h2>
+    <h2>[[#{persona.datospersona}]]</h2>
     <a th:href="@{/}">[[#{accion.regresar}]]</a>
     <br><br>
     <form th:action="@{/guardar}" method="post" th:object="${persona}">
